# fastapi-mcp-langgraph-template

./: LICENSE  README.md  compose-dev.yaml  compose.yaml  pyproject.toml
.github/workflows/: build.yaml
backend/: Dockerfile  pyproject.toml
backend/api/: config.py
backend/api/core/: config.py  dependencies.py  log.py  mcps.py  models.py
backend/api/core/agent/: orshestration.py  persistence.py
backend/api/routers/: checkpoints.py  llms.py  mcps.py
backend/mcp/: Dockerfile  main.py
backend/shared_mcp/: tools.py
docs/: mcp.md  supabase.md
envs/: backend.env
nginx/: nginx.conf
