[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faker>=37.3.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "langchain-postgres>=0.0.13",
    "langfuse>=2.60.6",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.1",
    "prometheus-client>=0.22.0",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.5.0",
    "rich>=14.0.0",
    "sse-starlette>=2.3.5",
]
